[package]
name = "editor-server"
version.workspace = true
edition.workspace = true

[features]
uniffi = ["dep:uniffi", "editor-model/uniffi", "editor-resource/uniffi"]
wasm = [
  "dep:tsify",
  "dep:wasm-bindgen",
  "editor-model/wasm",
  "editor-resource/wasm",
]

[dependencies]
editor-macros = { path = "../editor-macros" }
editor-model = { path = "../editor-model" }
editor-resource = { path = "../editor-resource" }
bitcode.workspace = true
hashbrown.workspace = true
ruzstd.workspace = true
serde.workspace = true
serde_bytes.workspace = true
skrifa.workspace = true
thiserror.workspace = true
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
write-fonts.workspace = true
