[package]
name = "editor-state"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[features]
test-utils = ["editor-model/test-utils", "editor-resource/test-utils"]
uniffi = ["dep:uniffi", "editor-model/uniffi"]
wasm = ["dep:tsify", "dep:wasm-bindgen", "editor-model/wasm"]

[dependencies]
editor-common = { path = "../editor-common" }
editor-crdt = { path = "../editor-crdt" }
editor-macros = { path = "../editor-macros" }
editor-model = { path = "../editor-model" }
editor-resource = { path = "../editor-resource" }
hashbrown = { workspace = true }
log.workspace = true
serde.workspace = true
thiserror.workspace = true
strum.workspace = true
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
editor-codec = { path = "../editor-codec" }
editor-model = { path = "../editor-model", features = ["test-utils"] }
editor-resource = { path = "../editor-resource", features = ["test-utils"] }
proptest = { workspace = true }
serde_json.workspace = true
