[package]
name = "editor-transaction"
version.workspace = true
edition.workspace = true

[features]
uniffi = [
  "dep:uniffi",
  "editor-common/uniffi",
  "editor-model/uniffi",
  "editor-state/uniffi",
]
wasm = [
  "dep:tsify",
  "dep:wasm-bindgen",
  "editor-common/wasm",
  "editor-model/wasm",
  "editor-state/wasm",
]

[dependencies]
editor-common = { path = "../editor-common" }
editor-crdt = { path = "../editor-crdt" }
editor-macros = { path = "../editor-macros" }
editor-model = { path = "../editor-model" }
editor-state = { path = "../editor-state" }
log.workspace = true
serde.workspace = true
smallvec.workspace = true
strum.workspace = true
thiserror.workspace = true
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
editor-crdt = { path = "../editor-crdt" }
editor-model = { path = "../editor-model", features = ["test-utils"] }
editor-state = { path = "../editor-state", features = ["test-utils"] }
proptest.workspace = true
serde_json.workspace = true
