[package]
name = "editor"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
macros = { path = "./macros" }
web-sys = { version = "0.3", features = ["console"] }
tiny-skia = "0.11"
skrifa = "0.40"
image = { version = "0.25", default-features = false, features = ["png"] }
parley = "0.7.0"
fontique = { version = "0.7.0", features = ["icu_properties"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
tsify = { version = "0.5", features = ["js"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
uuid = { version = "1.11", features = ["v4", "js", "serde"] }
bytemuck = { version = "1.14", features = ["derive"] }
icu_segmenter = { version = "2.1.1", default-features = false, features = [
  "serde",
] }
bytecount = "0.6.9"
anyhow = "1.0.100"
thiserror = "2.0.17"
bitflags = "2.10.0"
pretty_assertions = "1.4.1"
rstar = "0.12.2"
rustc-hash = "2"
indexmap = { version = "2", features = ["serde"] }
loro = "^1"
icu_properties = { version = "2.1.1", default-features = false, features = [
  "serde",
] }
icu_provider = { version = "2.1.1", features = ["serde"] }
icu_provider_blob = "2.1.1"
scraper = "0.25"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-bulk-memory']
