[package]
name = "fondue"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
cxx = "1.0.158"
napi = { version = "2.16.17", features = ["napi4"] }
napi-derive = "2.16.13"
ttf-parser = "0.25.1"

[build-dependencies]
cc = "1.2.21"
cxx-build = "1.0.158"
glob = "0.3.2"
napi-build = "2.1.6"
