[package]
name = "vermuda"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vermuda"
path = "src/main.rs"

[dependencies]
objc2 = { git = "https://github.com/madsmtm/objc2" }
objc2-foundation = { git = "https://github.com/madsmtm/objc2" }
objc2-app-kit = { git = "https://github.com/madsmtm/objc2" }
objc2-virtualization = { git = "https://github.com/madsmtm/objc2" }
block2 = { git = "https://github.com/madsmtm/objc2" }
dispatch2 = { git = "https://github.com/madsmtm/objc2" }
tokio = { version = "1.42", features = ["full"] }
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
getrandom = "0.2"
vmnet = "0.4"
libc = "0.2"
nix = { version = "0.29", features = ["net", "socket"] }
toml = "0.9"
clap = { version = "4.5", features = ["derive"] }
