[package]
name = "editor"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = ["wasm"]
wasm = [
  "dep:web-sys",
  "dep:serde-wasm-bindgen",
  "dep:wasm-bindgen",
  "dep:tsify",
  "dep:wasm-bindgen-futures",
  "dep:console_error_panic_hook",
  "dep:js-sys",
  "uuid/js",
]
uniffi = ["dep:uniffi"]
bench = []

[target.'cfg(target_os = "android")'.dependencies]
ash = { version = "0.38", default-features = false }
jni = { version = "0.22", optional = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
metal = "0.33"
objc = "0.2.7"

[dependencies]
anyhow = "1.0"
bytecount = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
csscolorparser = "0.8"
fancy-regex = "0.17"
fontique = { version = "0.7", default-features = false }
heck = "0.5"
kurbo = "0.13"
icu_properties = { version = "2.1", default-features = false, features = [
  "serde",
] }
icu_provider = { version = "2.1", features = ["serde", "sync"] }
icu_provider_blob = "2.1"
icu_segmenter = { version = "2.1", default-features = false, features = [
  "serde",
] }
indexmap = { version = "2", features = ["serde"] }
js-sys = { version = "0.3", optional = true }
loro = "^1"
macros = { path = "./macros" }
opentelemetry = { version = "0.31", default-features = false, features = [
  "trace",
] }
parley = { version = "0.7", default-features = false, features = ["std"] }
peniko = "0.6"
pretty_assertions = "1.4"
rstar = "0.12"
rustc-hash = "2"
ruzstd = "0.8"
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde_bytes = "0.11"
serde_json = "1.0"
skrifa = "0.40"
vello_cpu = "0.0.7"
tsify = { version = "0.5", features = ["js"], optional = true }
uuid = { version = "1.23", features = ["v4", "serde"] }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Performance",
  "OffscreenCanvas",
  "OffscreenCanvasRenderingContext2d",
  "ImageData",
], optional = true }
uniffi = { version = "0.31", optional = true }
vello = "0.8"
wgpu = "28.0"
write-fonts = "0.45"
yazi = "0.2"
zeno = "0.3"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "benchmarks"
harness = false
required-features = ["bench"]

[lints.rust]
warnings = "allow"
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(feature, values("cargo-clippy"))',
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-bulk-memory']
