[package]
name = "editor"
version = "0.0.1"
edition = "2024"

[workspace]
[workspace.package]
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = ["wasm"]
wasm = [
  "dep:web-sys",
  "dep:serde-wasm-bindgen",
  "dep:wasm-bindgen",
  "dep:tsify",
  "dep:wasm-bindgen-futures",
  "dep:console_error_panic_hook",
  "dep:js-sys",
  "uuid/js",
]
native = ["dep:jni"]
uniffi = ["dep:uniffi"]
bench = []

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.22", optional = true }

[dependencies]
anyhow = "1.0"
bytecount = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
csscolorparser = "0.8"
fancy-regex = "0.17"
fontique = { version = "0.8", default-features = false }
heck = "0.5"
icu_properties = { version = "2.1", default-features = false, features = [
  "serde",
] }
icu_provider = { version = "2.1", features = ["serde", "sync"] }
icu_provider_blob = "2.1"
icu_segmenter = { version = "2.1", default-features = false, features = [
  "serde",
] }
indexmap = { version = "2", features = ["serde"] }
js-sys = { version = "0.3", optional = true }
loro = "^1"
macros = { path = "./macros" }
opentelemetry = { version = "0.31", default-features = false, features = [
  "trace",
] }
parley = { version = "0.8", default-features = false, features = ["std"] }
pretty_assertions = "1.4"
rstar = "0.12"
rustc-hash = "2"
ruzstd = "0.8"
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde_bytes = "0.11"
serde_json = "1.0"
skrifa = "0.40"
tiny-skia = "0.12"
tsify = { version = "0.5", features = ["js"], optional = true }
uuid = { version = "1.21", features = ["v4", "serde"] }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Performance",
], optional = true }
uniffi = { version = "0.31", optional = true }
write-fonts = "0.45"
yazi = "0.2"
zeno = "0.3"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "benchmarks"
harness = false
required-features = ["bench"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-bulk-memory']
