[package]
name = "typie"
version.workspace = true
edition.workspace = true

[lib]
name = "typie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-toml"] }

[dependencies]
tauri = { version = "2", features = ["config-toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
